--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,50 @@
 @import './mixins/breakpoints';
 
+$color_1: rgba(224, 46, 97, 1);
+$color_2: #fff;
+$color_3: #e02e61;
+$color_4: #0073bb;
+$color_5: #000;
+$color_6: #1f1f1f;
+$color_7: #CCCCCC;
+$color_8: white;
+$color_9: rgb(0, 115, 187);
+$color_10: red;
+$color_11: #16527a;
+$color_12: #4095BF;
+$color_13: black;
+$color_14: #eee;
+$color_15: #E02E62;
+$color_16: #e53935;
+$color_17: rgba(45, 62, 80, 0.54);
+$font_family_lato: 'Lato','Ariel', sans-serif;
+$font_family_2: 'fontawesome';
+$font_family_3: FontAwesome;
+$font_family_4: sans-serif;
+$font_family_5: fontAwesome;
+$whitesmoke: whitesmoke;
+$background_color_2: #e02e61;
+$background_color_3: #0073bb;
+$background_color_4: #fff;
+$transparent: transparent;
+$background_color_6: #f2f2f2;
+$background_color_7: rgba(0, 0, 0, 0.05);
+$background_color_8: #fafafa;
+$background_color_9: rgba(0, 0, 0, 0.1);
+$background_color_10: inherit;
+$background_color_11: rgba(0, 0, 0, 0.2);
+$background_color_12: white;
+$background_color_13: #337ab7;
+$background_color_14: #eee;
+$border_color_1: #e02e61;
+$border_color_2: #0073bb;
+$border_color_3: transparent transparent #f2f2f2 transparent;
+$border_color_4: transparent transparent #fff transparent;
+$border_color_5: transparent transparent #e02e61 transparent;
+$border_color_6: red;
+$border_color_7: blue;
+
+
 $font-family-heading: 'Montserrat', sans-serif;
 $font-family-body: 'Open Sans', sans-serif;
 $font-size-small: 13px;
